# oawidgets

./: AUTHORS.rst  README.md  pyproject.toml
conda/: environment.yml  meta.yaml
doc/: conf.py  gallery.rst  index.rst  license.rst  readme.rst  usage.rst
doc/examples/: mtg_analysis.ipynb  mtg_plantframe.ipynb  pyvis_test.ipynb
src/oawidgets/: __init__.py  lpymagic.py  mtg.py  plantgl.py  version.py
test/: test_lpy.py  test_mtg.py  test_plantgl.py
