[build-system]
requires = [
    "setuptools",
    "setuptools_scm",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[tool.setuptools]
include-package-data = false # force explicit declaration of data (disable automatic inclusion)

# enable dynamic version based on git tags
[tool.setuptools_scm]

[project]
name = "oawidgets"
authors = [
  { name = "Baptiste Brument"},
  { name = "Christophe Pradal"},
]
description = "OpenAlea Widgets for Jupyter"
readme = "README.md"
license = "CECILL-C"
license-files = ["LICEN[CS]E*"]
requires-python = ">=3.10"
dynamic = ["version"]
keywords = ["openalea", "jupyter", "widgets", "MTG", "lpy", "plantgl", "3D"]
classifiers = [
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "ipython",
  "k3d",
  "pyvis",
  "matplotlib",
]

[project.optional-dependencies]
test = [
  "pytest",
  "nbmake",
  "pathlib",
  "IPython",
]
dev = [
  "pytest >=6",
  "pytest-cov >=3",
]
doc = [
  "sphinx-autobuild",
  "pydata-sphinx-theme",
  "myst-parser",
  "sphinx-favicon",
  "ipykernel",
  "sphinx-copybutton",
  "ipython_genutils",
  "nbsphinx",
]

# section specific to conda-only distributed package (not used by pip yet)
[tool.conda.environment]
channels = [
  "openalea3",
  "conda-forge"
]
dependencies = [
    "openalea.mtg",
    "openalea.plantgl",
    "openalea.lpy",
]

[project.urls]
Homepage = "https://oawidgets.readthedocs.io/"
"Bug Tracker" = "https://github.com/openalea-incubator/oawidgets/issues"
Discussions = "https://github.com/openalea-incubator/oawidgets/discussions"
Changelog = "https://github.com/openalea-incubator/oawidgets/releases"

